--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile files('libs/wheel-menu-library.jar')
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
