--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
+        <activity
+            android:name=".activity.AccountSettingActivity"
+            android:label="@string/action_accountsetting" />
         <!--android:theme="@style/AppTheme.NoActionBar"-->
 
     </application>
