--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile files('libs/wheel-menu-library.jar')
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
-    //    compile 'com.mcxiaoke.volley:library:1.0.19-SNAPSHOT'
-    //    compile 'com.mcxiaoke.volley:library-aar:1.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.0'
     compile files('libs/SMSSDK-1.1.5.jar')
+    compile 'com.android.support:cardview-v7:21.0.+'
 }
