--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         </activity>
         <activity
             android:name=".activity.AccountSettingActivity"
-            android:label="@string/action_accountsetting" />
+            android:label="@string/action_accountsetting"
+            android:theme="@style/AppTheme.NoActionBar" />
         <!--android:theme="@style/AppTheme.NoActionBar"-->
 
     </application>
