--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.0'
     compile files('libs/SMSSDK-1.1.5.jar')
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile files('libs/zxing.jar')
 }
