--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.0'
     compile files('libs/SMSSDK-1.1.5.jar')
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile files('libs/zxing.jar')
     compile files('libs/jsoup-1.8.2.jar')
 }
