--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('libs/zxing.jar')
     compile files('libs/jsoup-1.8.2.jar')
+    compile files('libs/libammsdk.jar')
 }
