--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile files('libs/zxing.jar')
     compile files('libs/jsoup-1.8.2.jar')
     compile files('libs/libammsdk.jar')
+    compile project(':sharesdk')
 }
