--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,22 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+VERSION_NAME=1.0.17
+VERSION_CODE=17
+GROUP=net.the4thdimension
+
+POM_DESCRIPTION=Android library project for providing multiple image selection from camera or gallery.
+POM_URL=https://github.com/jaydeepw/poly-picker/
+POM_SCM_URL=https://github.com/jaydeepw/poly-picker/
+POM_SCM_CONNECTION=scm:git@github.com:jaydeepw/poly-picker.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:jaydeepw/poly-picker.git
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=http://opensource.org/licenses/MIT
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=jaydeepw
+POM_DEVELOPER_NAME=Jaydeep
+
+BUILD_TOOLS_VERSION=22.0.1
+MIN_SDK_VERSION=15
+COMPILE_SDK_VERSION=22
+TARGET_SDK_VERSION=22
